routing basico, data binding, petición externa http

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<hola-mundo></hola-mundo>
-<hola-mundo></hola-mundo>
-<hola-mundo></hola-mundo>
-
-<h2>Rutas</h2>
-<ul>
-  <li *ngFor="let ruta of rutasPrueba">
-     {{ ruta }}
-  </li>
-</ul>
+<router-outlet>
+  <ul>
+    <li>
+      <a routerLink="/">Home</a>
+    </li>
+    <li>
+      <a routerLink="/testing">Testing</a>
+    </li>
+    <li>
+      <a routerLink="/about">About</a>
+    </li>
+  </ul>
+</router-outlet>
