--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.h1,h2{
+    color: rgb(250, 145, 107);
+    background-color: rgb(44, 71, 73);
+}
