rutas en una tabla y eliminación de código

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
 <router-outlet>
-  <ul>
-    <li>
-      <a routerLink="/">Home</a>
-    </li>
-    <li>
-      <a routerLink="/testing">Testing</a>
-    </li>
-    <li>
-      <a routerLink="/about">About</a>
-    </li>
-  </ul>
+  <table font color="#777777">
+    <tr>
+      <td>
+        <a routerLink="/">Home</a>
+      </td>
+      <td>
+        <a routerLink="/testing">Testing</a>
+      </td>
+      <td>
+        <a routerLink="/about">About</a>
+      </td>
+    </tr>
+  </table>
 </router-outlet>
