--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,8 @@
     color: rgb(250, 145, 107);
     background-color: rgb(44, 71, 73);
 }
+
+.table{
+    padding-left: 50;
+    background-color: black;
+}
